--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^27.5.1",
+    "jest-junit": "^14.0.0",
     "prettier": "^2.7.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
