--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "scripts": {
     "dev": "webpack --watch --progress",
     "build": "webpack",
-    "test": "jest"
+    "test-node": "jest",
+    "test-web": "npx playwright test"
   },
   "author": "Gabi Dobocan <gabi@sandworm.dev>",
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
+    "@playwright/test": "^1.23.4",
     "@types/jest": "^28.1.6",
     "babel-loader": "^8.2.5",
     "buffer": "^6.0.3",
@@ -31,6 +33,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^27.5.1",
     "jest-junit": "^14.0.0",
+    "playwright-watch": "^1.3.23",
     "prettier": "^2.7.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
