--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "playwright-watch": "^1.3.23",
     "prettier": "^2.7.1",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "test-libA": "file:tests/test_libs/test_libA"
   },
   "dependencies": {
     "source-map-js": "1.0.2"
