--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "prettier": "^2.7.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
-    "test-libA": "file:tests/test_libs/test_libA"
+    "test-libA": "file:tests/test_libs/test_libA",
+    "test-libB": "file:tests/test_libs/test_libB"
   },
   "dependencies": {
     "source-map-js": "1.0.2"
