--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "test-libA": "file:tests/test_libs/test_libA",
-    "test-libB": "file:tests/test_libs/test_libB"
+    "test-libB": "file:tests/test_libs/test_libB",
+    "test-addon": "file:tests/test_libs/test-addon"
   },
   "dependencies": {
     "source-map-js": "1.0.2"
