refactor: rename Inspector react app dir

--- a/cli/frontend/package.json
+++ b/cli/frontend/package.json
@@ -24,6 +24,9 @@
     "extends": [
       "react-app",
       "react-app/jest"
+    ],
+    "ignorePatterns": [
+      "**/bundle.js"
     ]
   },
   "browserslist": {
