--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -194,5 +194,7 @@ workflows:
           requires:
             - build
           filters:
+            branches:
+              ignore: /.*/
             tags:
               only: /^v.*/
