--- a/.npmignore
+++ b/.npmignore
@@ -11,3 +11,8 @@ tests
 junit*.xml
 test.js
 webpack.config.cjs
+.release-please-manifest.json
+release-please-config.json
+dist/node_modules
+cli/frontend/node_modules
+cli/frontend/build/static/js/bundle.js.map
