--- a/package.json
+++ b/package.json
@@ -48,6 +48,6 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "source-map-js": "^1.0.2"
+    "@jridgewell/trace-mapping": "^0.3.15"
   }
 }
