--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@playwright/test": "^1.23.4",
     "@types/jest": "^28.1.6",
     "babel-loader": "^8.2.5",
