--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,8 +84,16 @@ jobs:
       - attach_workspace:
           at: .
       - run:
+          name: Setup Code Climate test-reporter
+          command: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+            chmod +x ./cc-test-reporter
+      - run:
           name: Run tests
-          command: yarn test-node-unit
+          command: |
+            ./cc-test-reporter before-build
+            yarn test-node-unit
+            ./cc-test-reporter after-build --coverage-input-type lcov --exit-code $?
       - store_test_results:
           path: ./
   release-pr:
