chore: better unit test structure

--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "dev": "webpack --watch --progress",
     "build": "webpack",
     "lint": "yarn eslint ./src/ ./tests/ ./scripts/ ./cli/",
-    "test-node-unit": "jest --noStackTrace --config=tests/configs/jest.unit.config.js",
+    "test-node-unit": "jest --noStackTrace --config=tests/configs/jest.unit.node.config.js",
+    "test-jsdom-unit": "jest --noStackTrace --config=tests/configs/jest.unit.jsdom.config.js",
+    "test-unit": "yarn test-node-unit && yarn test-jsdom-unit",
     "test-node-capture": "jest --noStackTrace --config=tests/configs/jest.capture.config.js",
     "test-node-enforce": "jest --noStackTrace --config=tests/configs/jest.enforce.config.js",
-    "test-web": "npx playwright test --config=tests/configs/playwright.config.js",
+    "test-web-capture": "npx playwright test --config=tests/configs/playwright.config.js",
+    "test-web-all": "yarn test-web-capture && yarn test-jsdom-unit",
     "test-node-ce": "yarn test-node-enforce && yarn test-node-capture",
     "test-node-all": "yarn test-node-ce && yarn test-node-unit",
-    "test-all": "yarn test-node-all && yarn test-web",
+    "test-all": "yarn test-node-all && yarn test-web-all",
     "build-library-md": "node scripts/build-library-md.js",
     "build-library-min": "node scripts/build-library-min.js",
     "build-library": "yarn build-library-md && yarn build-library-min",
