--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ jobs:
           command: npx playwright install
       - run:
           name: Run tests
-          command: yarn test-web
+          command: yarn test-web-capture
       - store_test_results:
           path: ./
   test-node:
@@ -92,8 +92,11 @@ jobs:
           name: Run tests
           command: |
             ./cc-test-reporter before-build
-            yarn test-node-unit
-            ./cc-test-reporter after-build --coverage-input-type lcov --exit-code $?
+            yarn test-unit
+            ./cc-test-reporter format-coverage -t lcov -o tmp/codeclimate.jsdom.json coverage/jsdom/lcov.info
+            ./cc-test-reporter format-coverage -t lcov -o tmp/codeclimate.node.json coverage/node/lcov.info
+            ./cc-test-reporter sum-coverage tmp/codeclimate.*.json -p 2 -o tmp/codeclimate.total.json
+            ./cc-test-reporter upload-coverage -i tmp/codeclimate.total.json
       - store_test_results:
           path: ./
   release-pr:
