--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "test-unit": "yarn test-node-unit && yarn test-jsdom-unit",
     "test-node-capture": "yarn prepare-build-for-testing && jest --noStackTrace --config=tests/configs/jest.capture.config.js",
     "test-node-enforce": "yarn prepare-build-for-testing && jest --noStackTrace --config=tests/configs/jest.enforce.config.js",
-    "test-web-capture": "npx playwright test --config=tests/configs/playwright.config.js",
+    "test-web-capture": "yarn prepare-build-for-testing && npx playwright test --config=tests/configs/playwright.config.js",
     "test-web-all": "yarn test-web-capture && yarn test-jsdom-unit",
     "test-node-ce": "yarn test-node-enforce && yarn test-node-capture",
     "test-node-all": "yarn test-node-ce && yarn test-node-unit",
@@ -51,7 +51,8 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.0",
-    "jest": "^27.5.1",
+    "jest": "^29.0.3",
+    "jest-environment-jsdom": "^29.0.3",
     "jest-junit": "^14.0.0",
     "playwright-watch": "^1.3.23",
     "prettier": "^2.7.1",
