chore: update package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sandworm",
   "version": "1.0.1",
-  "description": "",
+  "description": "Easy auditing & sandboxing for your JavaScript dependencies 🪱",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": {
