--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "source-map-js": "^1.0.2"
+    "source-map-js": "1.0.2"
   },
   "keywords": [
     "security",
