--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jest-junit": "^14.0.0",
     "playwright-watch": "^1.3.23",
     "prettier": "^2.7.1",
+    "sandworm-jest": "^1.5.0",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   },
